# qdruid

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  prelude.rs
src/async_impl/: client.rs
src/components/: aggregations.rs  context.rs  data_sources.rs  dimension_specs.rs  druid_types.rs  extraction_functions.rs  filters.rs  granularities.rs  having_specs.rs  intervals.rs  limit_specs.rs  lookups.rs  mod.rs  ordering.rs  post_aggregations.rs  search_query_specs.rs  to_include.rs  topn_metric_specs.rs  virtual_columns.rs
src/queries/: datasource_metadata.rs  groupby.rs  mod.rs  response.rs  scan.rs  search.rs  segment_metadata.rs  sql.rs  time_boundary.rs  timeseries.rs  topn.rs
